src/lab/snapshots/asupersync__lab__explorer__tests__dpor_coverage_metrics_transcript.snap
---
source: src/lab/explorer.rs
assertion_line: 1936
expression: transcript
---
{
  "base": {
    "class_run_counts": {
      "[FINGERPRINT_0]": 3
    },
    "equivalence_classes": 1,
    "new_class_discoveries": 1,
    "novelty_histogram": {
      "0": 2,
      "1": 1
    },
    "saturation": {
      "existing_class_hits": 2,
      "runs_since_last_new_class": 2,
      "saturated": false,
      "window": 10
    },
    "total_runs": 3
  },
  "efficiency": 0.3333333333333333,
  "estimated_class_trend": [
    2,
    2,
    2
  ],
  "pruned_backtrack_points": 0,
  "sleep_pruned": 4,
  "total_backtrack_points": 6,
  "total_hb_races": 0,
  "total_races": 6
}
