src/lab/snapshots/asupersync__lab__explorer__tests__dpor_explorer_basic_exploration_transcript.snap
---
source: src/lab/explorer.rs
assertion_line: 1916
expression: transcript
---
{
  "certificate_divergences": [
    [
      "[SEED]",
      "[SEED]"
    ],
    [
      "[SEED]",
      "[SEED]"
    ],
    [
      "[SEED]",
      "[SEED]"
    ]
  ],
  "coverage": {
    "class_run_counts": {
      "[FINGERPRINT_0]": 7
    },
    "equivalence_classes": 1,
    "new_class_discoveries": 1,
    "novelty_histogram": {
      "0": 6,
      "1": 1
    },
    "saturation": {
      "existing_class_hits": 6,
      "runs_since_last_new_class": 6,
      "saturated": false,
      "window": 10
    },
    "total_runs": 7
  },
  "runs": [
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": true,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    }
  ],
  "top_unexplored": [],
  "total_runs": 7,
  "unique_classes": 1,
  "violation_seeds": [],
  "violations": []
}
