src/lab/snapshots/asupersync__lab__explorer__tests__saturation_metrics_detailed_transcript.snap
---
source: src/lab/explorer.rs
assertion_line: 2061
expression: transcript
---
{
  "existing_class_hits": 15,
  "runs_since_last_new_class": 8,
  "saturated": true,
  "window": 10
}
