src/lab/snapshots/asupersync__lab__explorer__tests__scenario_discovery_output_v2_scrubbed.snap
---
source: src/lab/explorer.rs
assertion_line: 1841
expression: value
---
{
  "certificate_divergences": [
    [
      "[SEED]",
      "[SEED]"
    ]
  ],
  "coverage": {
    "class_run_counts": {
      "[FINGERPRINT_0]": 2,
      "[FINGERPRINT_1]": 1
    },
    "equivalence_classes": 2,
    "new_class_discoveries": 2,
    "novelty_histogram": {
      "0": 1,
      "1": 2
    },
    "saturation": {
      "existing_class_hits": 1,
      "runs_since_last_new_class": 1,
      "saturated": false,
      "window": 10
    },
    "total_runs": 3
  },
  "runs": [
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": true,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 1
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": true,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    }
  ],
  "top_unexplored": [
    {
      "score": {
        "fingerprint": "[FINGERPRINT]",
        "novelty": 3,
        "persistence_sum": 15
      },
      "seed": "[SEED]"
    },
    {
      "score": null,
      "seed": "[SEED]"
    }
  ],
  "total_runs": 3,
  "unique_classes": 2,
  "violation_seeds": [
    "[SEED]"
  ],
  "violations": [
    {
      "fingerprint": "[FINGERPRINT]",
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violations": [
        "2 tasks leaked"
      ]
    }
  ]
}
