src/lab/snapshots/asupersync__lab__explorer__tests__schedule_explorer_concurrent_tasks_transcript.snap
---
source: src/lab/explorer.rs
assertion_line: 1889
expression: transcript
---
{
  "certificate_divergences": [
    [
      "[SEED]",
      "[SEED]"
    ],
    [
      "[SEED]",
      "[SEED]"
    ],
    [
      "[SEED]",
      "[SEED]"
    ],
    [
      "[SEED]",
      "[SEED]"
    ]
  ],
  "coverage": {
    "class_run_counts": {
      "[FINGERPRINT_0]": 10
    },
    "equivalence_classes": 1,
    "new_class_discoveries": 1,
    "novelty_histogram": {
      "0": 9,
      "1": 1
    },
    "saturation": {
      "existing_class_hits": 9,
      "runs_since_last_new_class": 9,
      "saturated": false,
      "window": 10
    },
    "total_runs": 10
  },
  "runs": [
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": true,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    }
  ],
  "top_unexplored": [],
  "total_runs": 10,
  "unique_classes": 1,
  "violation_seeds": [],
  "violations": []
}
