src/lab/snapshots/asupersync__lab__explorer__tests__topology_explorer_homology_scoring_transcript.snap
---
source: src/lab/explorer.rs
assertion_line: 1973
expression: transcript
---
{
  "certificate_divergences": [
    [
      "[SEED]",
      "[SEED]"
    ],
    [
      "[SEED]",
      "[SEED]"
    ]
  ],
  "coverage": {
    "class_run_counts": {
      "[FINGERPRINT_0]": 3
    },
    "equivalence_classes": 1,
    "new_class_discoveries": 1,
    "novelty_histogram": {
      "0": 2,
      "3": 1
    },
    "saturation": {
      "existing_class_hits": 2,
      "runs_since_last_new_class": 2,
      "saturated": false,
      "window": 10
    },
    "total_runs": 3
  },
  "runs": [
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": true,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    },
    {
      "certificate_hash": "[CERT_HASH]",
      "fingerprint": "[FINGERPRINT]",
      "is_new_class": false,
      "seed": "[SEED]",
      "steps": "[STEPS]",
      "violation_count": 0
    }
  ],
  "top_unexplored": [
    {
      "score": {
        "fingerprint": "[FINGERPRINT]",
        "novelty": 3,
        "persistence_sum": 0
      },
      "seed": "[SEED]"
    },
    {
      "score": {
        "fingerprint": "[FINGERPRINT]",
        "novelty": 0,
        "persistence_sum": 0
      },
      "seed": "[SEED]"
    },
    {
      "score": {
        "fingerprint": "[FINGERPRINT]",
        "novelty": 0,
        "persistence_sum": 0
      },
      "seed": "[SEED]"
    }
  ],
  "total_runs": 3,
  "unique_classes": 1,
  "violation_seeds": [],
  "violations": []
}
